Moved API implementations to new DataEngine - Business Layer class Added new LoginDto Renamed RepositoryWrappers Fleshed out RepositoryWrapper. New Integration Test. CreatedResponse instantiation moved into private ResponseUtility methods. Now use new repository method getOneOrThrow() Complete coverage of PojoUtility in tests.
